# UAVarPrior

./: .gitignore  .gitmessage  .pre-commit-config.yaml  AUTHENTICATION_GUIDE.md  Dockerfile  Jenkinsfile  PROPOSED_STRUCTURE.md  README.md  README_updated.md  REFACTORING_SUMMARY.md  REORGANIZATION_COMPLETE.md  TEST_PUSH.md  TEST_REORGANIZATION_SUMMARY.md  analyze_profile_similarity.py  check_dependencies.py  cli_old.py  compatibility_test.txt  complete_auth_setup.csh  copy_existing_matrices.py  create_missing_repos.csh  create_test_matrix.py  debug_analyze.py  dependency_report.py  deploy.sh  enrichment.ipynb  final_verification.py  fixed-test-analyze.yml  install.sh  install_and_test.csh  install_complete.csh  install_complete.sh  install_log.txt  install_package.csh  install_package.sh  methyl-evaluate-h5.yml  methyl-gve-deepcpg.yml  methyl-train-h5-sei.yml  methyl-train-h5.yml  minimal_analyze_test.py  performance_optimization.py  (+31 more)
archive_scripts/: install_and_test.csh  install_detailed.sh  install_package.csh  install_package.sh  run_profile_analysis.csh  run_test.csh
config_examples/: example_config.yml  simple_train_example.yml
configs/: README.md  lr0.05_test.yml  methyl-gve-deepcpg.yml  methyl-gve-sei.yml  methyl-train-h5.yml  peak-gve-h5.yml  test-fugep-analyze.yml  test-yaml-tag-analyze.yml  test_obj_tag.yml
docs/: CONFIG_GUIDE.md  USAGE_GUIDE.md  github_auth_setup.md  remote_setup_examples.md
fugep/: __main__.py  cli.py
fugep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bump_version.py  get_version.py  (+6 more)
(+193 files in other folders)
